# zsh-config

./: .auto-notify-ignore.zsh  .gitignore  .gitmodules  .p10k.prompt.zsh  .p10k.windows.zsh  .p10k.zsh  .vimrc  .zshenv  .zshrc  CLAUDE.md  LICENSE  aliases.zsh  bash_colors.zsh  color_scheme.zsh  completions.after.zsh  completions.zsh  conda_init.zsh  custom_functions.zsh  demo-async.zsh  demo-enhanced-colors.zsh  env.MacBookPro.zsh  env.devterm.zsh  env.james-macbook.zsh  env.james-ubuntu.zsh  env.james-xps.zsh  env.jet.zsh  env.ubuntu.zsh  env.uconsole.zsh  env.zerocalc.zsh  env.zsh  fig_init.zsh  fig_init_pre.zsh  install  install-bin  install-brew  install-cheatsheets  install-dotfiles  install-keyd  install-micro  install-nnn  (+25 more)
autocomplete/: install  package-lock.json  package.json
autocomplete/src/: README.md  gcmm.ts  sim.ts
brew/: Brewfile-000000  Brewfile-230219  Brewfile-230302  Brewfile-230303  Brewfile-230315  Brewfile-230401  Brewfile-230408
caddy/: install  james-macbook.Caddyfile
cheat-bin/: cheat
cheatsheets/: apt.md  aptr.md  asdf-cleanup.md  asdf.md  bat.md  cheat.md  confirm.md  deps.md  docker.md  dsp.md  eza.md  fzf.md  gcod.md  gcom.md  git-branch.md  git-cleanup-branch.md  git-i-really-fucked-up.md  git-prune-local.md  git.md  glow.md  gnome-bin.md  hist.md  http.md  install-box-config.md  install-link.md  is.md  j.md  md.md  npm-update-latest.md  npm.md  pico-8-lang.md  pico-8-shortcuts.md  pico-8.md  picoh.md  raspi.md  reload.md  start-workstation.md  terminal-colors.md  touch-sudo.md  update.md  (+4 more)
completions/: _cheat  _git-cleanup-branch  _is  _md  _touch-sudo
configs/git/: .gitconfig
configs/gnome/: quit-all-apps.desktop
configs/gnome/window-list@personal/: extension.js  metadata.json
configs/kitty/: kitty-aware-quit  kitty-current-window  kitty.conf  linux.conf  macos.conf  overrides.osx.conf  overrides.uconsole.conf
configs/ls_colors/: update
configs/micro/: settings.json
configs/steamos/: start-vnc.sh
configs/vscode/: keybindings.linux.json  keybindings.osx.json  keybindings.ubuntu.json  settings.osx.json  settings.ubuntu.json  settings.uconsole.json
configs/vscode/snippets/: lua.json  (+1 more)
dnsmasq/: install  james-macbook.dnsmasq.conf
functions/: _navi_call  _navi_widget  _poetry  _xcodes  aptr  asdf-cleanup  asdf-reshim  auto-notify-ignore  backup  bench  brew  brew-backup  cheat  color  conc  confirm  deps  download-ddex  download-latest-release  dsp  ef  environment  fast-download  flag-value  format-xmls  gcmm  gcod  gcom  get-hostname  git-branch  git-changed-files-to-lint  git-cleanup-branch  git-i-really-fucked-up  git-main-branch  git-prune-local  git-prune-remote  gitignore  global-python-version  gsdl  gsm  (+62 more)
installers/: 00-zshconfig  _stub  asdf  bat  cheatsheets  delta  eza  gitconfig  glow  gnome  gnome-extension-window-list  homebrew  httpie  keyd  kitty  micro-install  prettier  progress  ssh-config  streamdeck-binaries  thefuck  tldr  tmux  vscode
keyd/: default.config
legacy-uninstallers/: _stub  sublime-text
ls_colors/: LS_COLORS  ls-colors.sh
micro-config/: bindings.json  settings.json
steamos/: start-vnc.desktop  start-vnc.sh  steamos-install.desktop  steamos-install.sh
sublime/: Default (Linux).sublime-keymap  Default.sublime-keymap  Default.sublime-mousemap  Preferences.sublime-settings
sublime-snippets/: .gitignore
sublime-snippets/bash/: shebang.sane-snippet
sublime-snippets/c++/: fmts.sane-snippet  ilog.sane-snippet  logds.sane-snippet  loge.sane-snippet  logi.sane-snippet  logis.sane-snippet  logw.sane-snippet
templates/c-sdl/: CMakeLists.txt
templates/cpp/: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.tpl  PROJECT_NAME_TITLE.cpp.tpl
templates/love/: config.lua  includes.txt  main.lua
templates/node/: .eslintrc.cjs  .lintstagedrc  package.json  readme.md
templates/phaser/: .eslintrc.js  .gitignore  .prettierrc.js  LICENSE  README.md  capacitor.config.ts  index.html  package.json  tsconfig.json  webpack.config.js
templates/sdl-game/: .gitignore  CMakeLists.txt.tpl  PROJECT_NAME_TITLE.cpp.tpl  config.h.in  config.h.in.tpl
templates/sdl-game-old/: CMakeLists.txt.tpl  PROJECT_NAME_TITLE.cpp  declarations.h
templates/sdl2-game/: CMakeLists.txt.tpl
updaters/: _stub  arch  asdf  brew  debian  node  snap  soft  tldr  xcodes  yay  zinit  zsh-config
vscode/: install  keybindings.json  settings.json
vscode/snippets/: javascript.json  lua.json  makefile.json  my-snippets.code-snippets
wrappers/: bunzip2  bzip2  cp  dd  gunzip  gzip  mv  rsync  tar  unxz  unzip  xz  zip
(+91 files in other folders)
